fluxcd/apps/overlays/production/linkwarden/image-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden
spec:
  template:
    spec:
      containers:
      - name: linkwarden
        image: ghcr.io/linkwarden/linkwarden:latest
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden-postgres
spec:
  template:
    spec:
      containers:
      - name: postgres
        image: docker.jcr.pcfae.com/library/postgres:16-alpine
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden-meilisearch
spec:
  template:
    spec:
      containers:
      - name: meilisearch
        image: docker.jcr.pcfae.com/getmeili/meilisearch:v1.6
