fluxcd/apps/overlays/production/linkwarden/meilisearch-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden-meilisearch
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: meilisearch
          image: docker.io/getmeili/meilisearch:v1.54.3
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - name: temple-of-time-linkwarden-meilisearch-data
              mountPath: /meili_data
  volumeClaimTemplates:
    - metadata:
        name: temple-of-time-linkwarden-meilisearch-data
      spec:
        storageClassName: ceph-rbd-delete
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
