fluxcd/apps/overlays/production/linkwarden/meilisearch-resources-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden-meilisearch
spec:
  template:
    spec:
      containers:
        - name: meilisearch
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 512Mi
