fluxcd/apps/overlays/production/linkwarden/postgres-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden-postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        policy.prplanit.com/access-class: postgres
        policy.prplanit.com/service-scope: temple-of-time.linkwarden.postgres
    spec:
      securityContext:
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgres
          image: docker.io/library/postgres:18-alpine
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: postgres
              mountPath: /var/lib/postgresql/data
            - name: postgres-run
              mountPath: /var/run/postgresql
            - name: postgres-tmp
              mountPath: /tmp
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: optcp-linkwarden-postgres
        - name: postgres-run
          emptyDir: {}
        - name: postgres-tmp
          emptyDir: {}
