fluxcd/apps/overlays/production/linkwarden/replicas-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden-postgres
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden-meilisearch
spec:
  replicas: 1
