fluxcd/apps/overlays/production/linkwarden/storage-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden
spec:
  template:
    spec:
      containers:
        - name: linkwarden
          volumeMounts:
            - name: temple-of-time-linkwarden-data
              mountPath: /data/data
  volumeClaimTemplates:
  - metadata:
      name: temple-of-time-linkwarden-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 5Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden-postgres
spec:
  template:
    spec:
      containers:
        - name: postgres
          volumeMounts:
            - name: temple-of-time-linkwarden-postgres
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: temple-of-time-linkwarden-postgres
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 10Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden-meilisearch
spec:
  template:
    spec:
      containers:
        - name: meilisearch
          volumeMounts:
            - name: temple-of-time-linkwarden-meilisearch
              mountPath: /meili_data
  volumeClaimTemplates:
  - metadata:
      name: temple-of-time-linkwarden-meilisearch
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 2Gi
