fluxcd/apps/overlays/production/linkwarden/namespace-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden-postgres
  namespace: song-of-time
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-postgres
  namespace: song-of-time
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden-meilisearch
  namespace: song-of-time
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-meilisearch
  namespace: song-of-time
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden
  namespace: song-of-time
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: song-of-time
