fluxcd/apps/overlays/production/linkwarden/service-linkwarden-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  labels:
    policy.prplanit.com/ingress: "true"
