fluxcd/apps/overlays/production/linkwarden/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  annotations:
    lbipam.cilium.io/ips: 172.22.30.222
    lbipam.cilium.io/sharing-key: song-of-time
    lbipam.cilium.io/sharing-cross-namespace: "*"
