fluxcd/apps/overlays/production/linkwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkwarden
  namespace: temple-of-time
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Content & Media (Temple of Time🏛️)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
  hostnames:
    - "lwd.optcp.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linkwarden
          port: 3000
